// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContent AppContent - should match snapshot 1`] = `
<div>
  <div />
  <div>
    <Component>
      Description
    </Component>
    <Component
      html=""
    />
  </div>
  <div>
    <Component>
      Permission Required
    </Component>
    <ul />
  </div>
  <div>
    <div>
      <Component>
        Category
      </Component>
      <p>
        None
      </p>
    </div>
    <div>
      <Component>
        Destop Integration
      </Component>
      <Component
        key="Identity Check"
      >
        Identity Check
      </Component>
      <Component
        key="Property Marketing Information"
      >
        Property Marketing Information
      </Component>
      <Component
        key="Vendor Marketing Report"
      >
        Vendor Marketing Report
      </Component>
      <Component
        key="Property Details Generation"
      >
        Property Details Generation
      </Component>
      <Component
        key="Applicant Export"
      >
        Applicant Export
      </Component>
      <Component
        key="Property"
      >
        Property
      </Component>
      <Component
        key="Applicant"
      >
        Applicant
      </Component>
    </div>
    <Component
      header="Developer"
    >
      TBC
    </Component>
    <Component
      header="About Developer"
    >
      <p>
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam aliquid culpa saepe asperiores debitis illo dolorum dolore incidunt officiis praesentium, nemo similique veritatis exercitationem perferendis non mollitia animi laboriosam perspiciatis.
      </p>
    </Component>
    <Component
      header="Contact Developer"
    >
      <Component
        type="button"
        variant="primary"
      >
        NEED HELP?
      </Component>
    </Component>
  </div>
</div>
`;

exports[`AppContent renderCategory - should match snapshot 1`] = `
<div>
  <div>
    <Component>
      Category
    </Component>
    <p>
      None
    </p>
  </div>
</div>
`;

exports[`AppContent renderDescripion - should match snapshot 1`] = `
<div>
  <div>
    <Component>
      Description
    </Component>
    <Component
      html="enim facilisis"
    />
  </div>
</div>
`;

exports[`AppContent renderDesktopIntegrationTypes - should match snapshot 1`] = `
<div>
  <div>
    <Component>
      Destop Integration
    </Component>
    <Component
      key="Identity Check"
    >
      Identity Check
    </Component>
    <Component
      key="Property Marketing Information"
    >
      Property Marketing Information
    </Component>
    <Component
      key="Vendor Marketing Report"
    >
      Vendor Marketing Report
    </Component>
    <Component
      key="Property Details Generation"
    >
      Property Details Generation
    </Component>
    <Component
      key="Applicant Export"
    >
      Applicant Export
    </Component>
    <Component
      key="Property"
    >
      Property
    </Component>
    <Component
      key="Applicant"
    >
      Applicant
    </Component>
  </div>
</div>
`;

exports[`AppContent renderExtraMedia - should match snapshot 1`] = `
<div>
  <div
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg"
  >
    <img
      src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg"
    />
  </div>
  <div
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
  >
    <img
      src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png"
    />
  </div>
  <div
    key="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
  >
    <img
      src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png"
    />
  </div>
</div>
`;

exports[`AppContent renderPermissions - should match snapshot 1`] = `
<div>
  <div>
    <Component>
      Permission Required
    </Component>
    <ul>
      <li
        key="Read data about developers"
      >
        Read data about developers
      </li>
      <li
        key="Write data about developers"
      >
        Write data about developers
      </li>
    </ul>
  </div>
</div>
`;
